[package]
name = "pmapi-sys"
version = "0.1.1"
authors = ["Jose Fernandez <me@jrfernandez.com>"]
license = "LGPL-2.1-or-later"
description = "Rust bindings for the Performance Metrics API (PMAPI)"
repository = "https://github.com/jfernandez/pmapi-sys"
readme = "README.md"
keywords = ["pmapi", "performance", "metrics", "pcp", "bindings"]
categories = ["external-ffi-bindings"]
edition = "2021"
publish = ["crates-io"]

[build-dependencies]
bindgen = "0.69.4"
